# deabbreviator

./: .copywrite.hcl  .dockerignore  .pre-commit-config.yaml  .templatesyncignore  Dockerfile  LICENSE  compose.yaml  config.example.yaml  pyproject.toml  readme.md  renovate.json  requirements.txt
.github/workflows/: CI-CD.yaml  deploy.yaml  docker.yaml  sync_template.yaml  update_dependencies.yaml
guides/: getting-started.md
scripts/check_listings/: __main__.py  main.py
scripts/check_listings/listings/: DiscordAppDirectory.py  DiscordBotListCom.py  DiscordBotsGg.py  DiscordMe.py  DiscordsCom.py  DisforgeCom.py  Listing.py  TopGg.py  WumpusStore.py  __init__.py
src/: __main__.py  patcher.py  start.py
src/config/: __init__.py  bot_config.py
src/custom/: __init__.py
src/database/: __init__.py
src/database/config/: __init__.py
src/database/migrations/models/: 0_20241224165004_init.py
src/database/models/: __init__.py  guild.py  user.py
src/database/utils/: __init__.py  preload.py
src/extensions/add-dm/: __init__.py  main.py  readme.md
src/extensions/branding/: __init__.py  branding.py  readme.md
src/extensions/deabbreviator/: __init__.py  main.py  translations.yml
src/extensions/help/: __init__.py  translations.yml
src/extensions/help/pages/: __init__.py  classes.py
src/extensions/listings/: main.py  readme.md
src/extensions/nice-errors/: handler.py  main.py  patch.py
src/extensions/nice_errors/: __init__.py  main.py  patch.py  readme.md  translations.yml
src/extensions/nice_errors/handlers/: __init__.py  base.py  cooldown.py  forbidden.py  generic.py  not_found.py
src/extensions/ping/: __init__.py  ping.py  readme.md
src/extensions/status-post/: main.py  readme.md
src/i18n/: __init__.py  classes.py  utils.py
src/log/: logger.py
src/utils/: __init__.py  cooldown.py  extensions.py  iterator.py  setup_func.py
tests/: __init__.py  deabbreviator_test.py  schema_test.py
